# katottglib

./: MANIFEST.in  Makefile  README.md  README.rst  katottg.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
data/: data.py  entity.py
katottglib/: __init__.py  data.py  katottg.py  kodifikator.xlsx  test.py
katottglib/data/: .gitignore  __init__.py  data.py  kodifikator.xlsx
test/: __init__.py
