[metadata]
name = katottglib
version = 0.2.5
description = A Python lib to operate KATOTTG addresses (classified administrative division of Ukraine).
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/sen-den/katottglib
author = Denis Senchishen
author_email = dsenchishen@icloud.com
license = MIT
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3

[options]
include_package_data = true
packages = find:
